# pocketquant

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION-MANIFEST.md  README.md  TODO.md  docker-compose.yml  justfile  pyproject.toml  pyrightconfig.json  repomix-output.xml
.claude/: CLAUDE.md  settings.local.json
docker/: compose.yml
docs/: README.md  code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
plans/260108-1144-local-testing/: issues.md  plan.md
plans/260108-1144-trading-features/: plan.md
plans/260108-1144-vps-deployment/: plan.md
plans/260114-1831-docker-restructure/: plan.md
plans/260121-0740-motor-to-pymongo-async-migration/: phase-01-update-dependencies.md  phase-02-migrate-database-connection.md  phase-03-update-repository-types.md  phase-04-update-configuration.md  phase-05-code-quality-docs.md  phase-06-manual-testing.md  plan.md
plans/260126-1050-backend-cqrs-refactor/: phase-01a-infrastructure-interfaces.md  phase-01b-error-handling-fixes.md  phase-01c-bar-manager-rename.md  phase-02-inline-ohlcv-repository.md  phase-03-inline-symbol-repository.md  phase-04-update-barmanager-imports.md  phase-05-cleanup-and-verify.md  plan.md
plans/260127-2029-ddd-vertical-slice-refactor/: phase-01-centralize-constants.md  phase-02-infrastructure-layer.md  phase-03-domain-layer.md  phase-04-mediator-eventbus.md  phase-05-refactor-features-cqrs.md  phase-06-cross-cutting-middleware.md  phase-07-integration-infrastructure.md  phase-08-tests-documentation.md  plan.md
plans/reports/: DOCUMENTATION-SUMMARY.md  README.md  brainstorm-260108-1144-pocketquant-testing-deployment.md  brainstorm-260114-1831-docker-folder-restructure.md  brainstorm-260126-1050-backend-architecture-refactor.md  (+17 more)
scripts/: check_env.py  mongo-init.js  test_mongodb_auth.py
src/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py
testscripts/: api-test.http  stream_quotes.py  test_sync_jobs.py
(+115 files in other folders)
