[project]
name = "pocketquant"
version = "0.1.0"
description = "Algorithmic trading platform with backtesting and forward testing capabilities"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "PocketQuant Team" }]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "pymongo>=4.16.0",        # MongoDB driver (native async API)

    # Cache
    "redis>=5.0.0",

    # Background Jobs
    "arq>=0.25.0",            # Async Redis Queue for background jobs
    "apscheduler>=3.10.0",    # For scheduled jobs

    # Data Providers
    "tvdatafeed @ git+https://github.com/rongardF/tvdatafeed.git",  # TradingView historical data
    "websockets>=12.0",       # WebSocket client for real-time quotes
    "pandas>=2.1.0",
    "numpy>=1.26.0",

    # Logging
    "structlog>=24.1.0",      # Structured logging
    "python-json-logger>=2.0.0",

    # Utils
    "httpx>=0.26.0",          # Async HTTP client
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",           # Rich console output for error messages
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
